Fixed annoying scrollbar

--- a/public/style.scss
+++ b/public/style.scss
@@ -51,6 +51,15 @@
   box-sizing: border-box;
 }
 
+*::-webkit-scrollbar {
+  width: 0;
+}
+
+html {
+    -ms-overflow-style: none;  /* IE 10+ */
+    scrollbar-width: none; /* Firefox */
+}
+
 body {
   margin: 0;
   height: 100vh;
